Bugfixing python dependencies.
- Enforced the use of XGBoost > 1.0.0 by setting usable to False in capice_v2_0_0.py. Updated README.md. Adjusted setup.py to work with python3.6 (manual install can be found in the README.md).

--- a/config.cfg
+++ b/config.cfg
@@ -10,7 +10,7 @@ caddversion = missing
 
 [OVERWRITES]
 # Set the string to overwrite what impute file should be used (found as the name in the init of a imputing file). Can be left "missing".
-imputefile = CADD 1.4, GRCh build 37
+imputefile = missing
 
 # Set the string to overwrite what model file should be used (found as the name in the init of a model file). Can be left "missing".
 modelfile = missing
