Changed config "disablelogfile" to "enablelogfile" for better clearance.
Refactored logger.py since handlers would still be applied even if the singleton got reset. Also for clearer code. Logger now prints more informative messages aswell, namely the filename and the function of where the log call originated from.

Changed setup of test_logger.py to ensure a clean logger instance.

--- a/config.cfg
+++ b/config.cfg
@@ -16,8 +16,8 @@ imputefile = missing
 modelfile = missing
 
 [MISC]
-# Enable the logfile (0) or disable the logfile (1).
-disablelogfile = 0
+# Enable the logfile (1) or disable the logfile (0).
+enablelogfile = 1
 
 [TRAINING]
 # Make the input data balanced. 0 = no balancing, 1 = balancing
