WIP adding VEP support

--- a/config.cfg
+++ b/config.cfg
@@ -19,6 +19,13 @@ modelfile = missing
 # Enable the logfile (1) or disable the logfile (0).
 enablelogfile = 1
 
+[CADD]
+# The location of the CADD database. Leave "missing" if not available.
+databaselocation = missing
+
+# The location of the reference genome. Leave "missing" if not available.
+reference = missing
+
 [TRAINING]
 # Make the input data balanced. 0 = no balancing, 1 = balancing
 makebalanced = 0
