Added support for CADD InDels database

--- a/config.cfg
+++ b/config.cfg
@@ -20,8 +20,11 @@ modelfile = missing
 enablelogfile = 1
 
 [CADD]
-# The location of the CADD database. Leave "missing" if not available.
-databaselocation = missing
+# The location of the SNVs CADD database. Leave "missing" if not available.
+snvsdatabaselocation = missing
+
+# The location of the InDels CADD database. Leave "missing" if not available.
+indelsdatabaselocation = missing
 
 # The location of the reference genome. Leave "missing" if not available.
 reference = missing
