Commit for working from home. WIP removing anything with CADD.

--- a/config.cfg
+++ b/config.cfg
@@ -17,17 +17,11 @@ modelfile = missing
 
 [MISC]
 # Enable the logfile (1) or disable the logfile (0).
-enablelogfile = 1
+enablelogfile = 0
 
-[CADD]
-# The location of the SNVs CADD database. Leave "missing" if not available.
-snvsdatabaselocation = missing
-
-# The location of the InDels CADD database. Leave "missing" if not available.
-indelsdatabaselocation = missing
-
+[DATAFILES]
 # The location of the reference genome. Leave "missing" if not available.
-reference = missing
+reference = /home/sietsmarj/CADD_files/human_g1k_v37.fasta.gz
 
 [TRAINING]
 # Make the input data balanced. 0 = no balancing, 1 = balancing
