Solving merge conflicts

--- a/config.cfg
+++ b/config.cfg
@@ -17,17 +17,17 @@ modelfile = missing
 
 [MISC]
 # Enable the logfile (1) or disable the logfile (0).
-enablelogfile = 1
+enablelogfile = 0
 
 [CADD]
 # The location of the SNVs CADD database. Leave "missing" if not available.
-snvsdatabaselocation = missing
+snvsdatabaselocation = /home/rjsietsma/shared/CADD_database/whole_genome_SNVs_inclAnno.tsv.gz
 
 # The location of the InDels CADD database. Leave "missing" if not available.
-indelsdatabaselocation = missing
+indelsdatabaselocation = /home/rjsietsma/shared/CADD_database/InDels_inclAnno.tsv.gz
 
 # The location of the reference genome. Leave "missing" if not available.
-reference = missing
+reference = /home/rjsietsma/shared/CADD_database/human_g1k_v37_phiX.fasta.gz
 
 [TRAINING]
 # Make the input data balanced. 0 = no balancing, 1 = balancing
