Resetting default values for the config.cfg.

--- a/config.cfg
+++ b/config.cfg
@@ -17,11 +17,11 @@ modelfile = missing
 
 [MISC]
 # Enable the logfile (1) or disable the logfile (0).
-enablelogfile = 0
+enablelogfile = 1
 
 [DATAFILES]
 # The location of the reference genome. Leave "missing" if not available.
-reference = /home/sietsmarj/CADD_files/human_g1k_v37.fasta.gz
+reference = missing
 
 [TRAINING]
 # Make the input data balanced. 0 = no balancing, 1 = balancing
