Done separating CAPICE code from any CADD references or usages. Added functionality to parse the VEP version and GRCh assembly from the VEP file. Also altered code to fit Python code style described in PEP8.
Changelog:
- Renamed vep_processors directory to vep.
- cadd_version_checker.py: renamed to input_version_checker.py.
- capice.py: PEP8 and implementation of config vep version and grch build.
- capice_imputing.py: PEP8 and fixed bug where dtypes could not be applied cause the columns were not present.
- CAPICE_input.tsv.gz: Added descriptive VEP header line.
- capice_v1_0_0.py: PEP8 and adjusted to VEP instead of CADD.
- codeStyleConfig.xml: altered line wrap to 80 as described in PEP8.
- config.cfg: Added VEP version.
- config_reader.py: PEP8 and added genome build postprocessor to remove GRCh or any sub-version.
- global_manager.py: PEP8 and added functions to save config GRCh builds and VEP version.
- impute_values_abstract.py: PEP8 and adjusted to VEP.
- input_header_parser.py: PEP8 and added the function to parse the VEP version and GRCh build from the converted VEP output file.
- input_version_checker.py: Renamed from cadd_version_checker.py, still does the same but now for VEP versions and GRCh builds.
- load_file_preprocessor.py: PEP8 and added functionality to also remove # from column names.
- main_capice.py: PEP8 and added input_version_checker.py to load_file().
- model_abstract.py: PEP8 and adjusted to VEP.
- preprocessor.py: PEP8 and adjusted to VEP.
- README.md: Adjusted to VEP.
- training_preprocessor.py: Adjusted to VEP.
- VEP104.py: PEP8 and adjusted to VEP.

--- a/config.cfg
+++ b/config.cfg
@@ -5,8 +5,8 @@ logfilelocation = output
 # Set a genome build if not present in file header in integer. Can be left "missing".
 genomebuild = missing
 
-# Set a CADD version if not present in file header in float. Can be left "missing".
-caddversion = missing
+# Set a VEP version if not present in file header in float. Can be left "missing".
+vepversion = missing
 
 [OVERWRITES]
 # Set the string to overwrite what impute file should be used (found as the name in the init of a imputing file). Can be left "missing".
