feat: (temporary) removal of LookupAnnotator
- Commented out any directly functional code to the use of a reference
genome for annotations within CAPICE. Might be temporary, might be
permanent. Depends if a VEP plugin is already available or can be
created to mimic the function of the current lookup annotator.

--- a/config.cfg
+++ b/config.cfg
@@ -20,7 +20,7 @@ modelfile = missing
 enablelogfile = 1
 
 [DATAFILES]
-# The location of the reference genome. Leave "missing" if not available.
+# The location of the reference genome.
 reference = missing
 
 [TRAINING]
