--- a/default.cfg
+++ b/default.cfg
@@ -19,6 +19,10 @@ modelfile = missing
 # Enable the logfile (1) or disable the logfile (0).
 enablelogfile = 0
 
+[DATAFILES]
+# The location of the reference genome.
+reference = missing
+
 [TRAINING]
 # Make the input data balanced. 0 = no balancing, 1 = balancing
 makebalanced = 0
