--- a/default.cfg
+++ b/default.cfg
@@ -5,8 +5,8 @@ logfilelocation = output
 # Set a genome build if not present in file header in integer. Can be left "missing".
 genomebuild = missing
 
-# Set a CADD version if not present in file header in float. Can be left "missing".
-caddversion = missing
+# Set a VEP version if not present in file header in float. Can be left "missing".
+vepversion = missing
 
 [OVERWRITES]
 # Set the string to overwrite what impute file should be used (found as the name in the init of a imputing file). Can be left "missing".
