--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,10 @@ dist: focal
 language: python
 python:
   - "3.9"
+cache: pip
+branches:
+  only:
+    - master
 install:
   - pip install -r requirements.txt
 script:
