set default vepversion to 104

--- a/default.cfg
+++ b/default.cfg
@@ -3,7 +3,7 @@
 genomebuild = missing
 
 # Set a VEP version if not present in file header in float. Can be left "missing".
-vepversion = missing
+vepversion = 104
 
 [OVERWRITES]
 # Set the string to overwrite what impute file should be used (found as the name in the init of a imputing file). Can be left "missing".
