--- a/.travis.yml
+++ b/.travis.yml
@@ -14,4 +14,4 @@ before_install:
 install:
   - pip install -r requirements.txt
 script:
-  - pytest --cov=capice --cov-report xml
+  - pytest --cov=. --cov-report xml
