--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ before_install:
 install:
 - pip install -r requirements.txt
 script:
-- pytest --cov=. --cov-report xml
+- pytest --junitxml=results.xml --cov=. --cov-report xml
 - sonar-scanner
 addons:
   sonarcloud:
