--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,2 +1,7 @@
 sonar.projectKey=molgenis_capice
 sonar.organization=molgenis
+
+sonar.python.xunit.reportPath=results.xml
+sonar.python.coverage.reportPath=coverage.xml
+
+sonar.python.version=3.9
