Update Travis config: fix report paths key

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,6 +2,6 @@ sonar.projectKey=molgenis_capice
 sonar.organization=molgenis
 
 sonar.python.xunit.reportPath=results.xml
-sonar.python.coverage.reportPath=coverage.xml
+sonar.python.coverage.reportPaths=coverage.xml
 
 sonar.python.version=3.9
