--- a/.travis.yml
+++ b/.travis.yml
@@ -11,11 +11,12 @@ branches:
 before_install:
 - pip install -U pip
 - pip install -U pytest
-- pip install pytest-cov
 install:
 - pip install .
+- pip install coverage
 script:
-- pytest --junitxml=results.xml --cov=. --cov-report xml
+- coverage run --source molgenis.capice -m pytest --junitxml=results.xml
+- coverage xml
 - sonar-scanner
 addons:
   sonarcloud:
