--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,6 @@
 sonar.projectKey=molgenis_capice
 sonar.organization=molgenis
-sonar.sources=src
+sonar.sources=src/molgenis
 sonar.python.xunit.reportPath=results.xml
 sonar.python.coverage.reportPaths=coverage.xml
 
