--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,8 @@ branches:
   - master
   - "/^v\\d+\\.\\d+(\\.\\d+)?(-\\S*)?$/"
 before_install:
+- python3 -m venv ./venv
+- source ./venv/bin/activate
 - pip install -U pip
 - pip install -U pytest
 install:
