--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,6 @@
 sonar.projectKey=molgenis_capice
 sonar.organization=molgenis
-sonar.sources=/home/travis/virtualenv/python3.9.0/lib/python3.9/site-packages/
+sonar.sources=venv/lib/python3.9/site-packages/molgenis
 sonar.python.xunit.reportPath=results.xml
 sonar.python.coverage.reportPaths=coverage.xml
 
