--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,7 +1,9 @@
 sonar.projectKey=molgenis_capice
 sonar.organization=molgenis
-sonar.sources=venv/lib/python3.9/site-packages/molgenis
+sonar.sources=./src
 sonar.python.xunit.reportPath=results.xml
 sonar.python.coverage.reportPaths=coverage.xml
+sonar.tests=./tests
+sonar.verbose=true
 
 sonar.python.version=3.9
