--- a/.travis.yml
+++ b/.travis.yml
@@ -10,10 +10,8 @@ branches:
   - /^v\d+\.\d+(\.\d+)?(-\S*)?$/
 before_install:
 - pip install -U pip
-- pip install -U pytest
 install:
-- pip install -e .
-- pip install coverage
+- pip install -e '.[testing]'
 script:
 - coverage run -m pytest --junitxml=results.xml
 - coverage xml
