Added src/test directory information for sonar.

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,9 @@
 sonar.projectKey=molgenis_capice
 sonar.organization=molgenis
 
+sonar.sources = src/
+sonar.tests = tests/
+
 sonar.python.xunit.reportPath=results.xml
 sonar.python.coverage.reportPaths=coverage.xml
 
