--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,40 +1,41 @@
 [build-system]
 requires = [
-    "setuptools",
-    "wheel"
+    "wheel",
+    "poetry-core"
 ]
-build-backend = "setuptools.build_meta"
+build-backend = "poetry.core.masonry.api"
 
-[project]
-name = "CAPICE"
+[tool.poetry]
+name = "capice"
 description = "Consequence Agnostic Pathogenicity Interpretation of Clinical Exoma variations. State of the art machine learning to predict SNVs and InDels pathogenicity."
 version = "5.0.0"
 authors = [
-    { name = "Molgenis", email = "molgenis-support@umcg.nl" }
+    "Molgenis <molgenis-support@umcg.nl>"
 ]
 readme = "README.md"
-license = {file = "LICENSE"}
-requires-python = ">=3.10"
-dependencies = [
-    "numpy==1.23.2",
-    "pandas==1.4.4",
-    "scipy==1.9.1",
-    "scikit-learn==1.1.2",
-    "xgboost==1.7.3"
-]
+license = "LICENSE"
 classifiers=[
-    "Development Status :: 4 - Beta",
+    "Development Status :: 5 - Production/Stable",
     "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
     "Programming Language :: Python :: 3.10"
 ]
+scripts = { capice = { callable = "molgenis.capice.capice:main" } }
+packages = [
+    { include = "molgenis", from = 'src' }
+]
+include = [
+    "molgenis/capice/resource/resource_file.vcf"
+]
 
-[project.scripts]
-capice = "molgenis.capice.capice:main"
+[tool.poetry.dependencies]
+python = "^3.10"
+numpy = "1.23.2"
+pandas = "1.4.4"
+scipy = "1.9.1"
+scikit-learn = "1.1.2"
+xgboost = "1.7.3"
 
-[tool.setuptools.dynamic]
-readme = {file = "README.md"}
-
-[project.optional-dependencies]
+[tool.poetry.extras]
 test = ["pytest", "coverage", "mypy", "flake8", "flake8-import-order", "flake8-pyproject"]
 
 [tool.mypy]
