--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,9 +31,16 @@ pandas = "1.5.3"
 scipy = "1.10.0"
 scikit-learn = "1.2.1"
 xgboost = "1.7.3"
+pytest = { version = "^7.2" , optional = true }
+coverage = { version = "^7.2" ,  optional = true }
+mypy = { version = "^1.0" ,  optional = true }
+flake8 = { version = "^6.0" ,  optional = true }
+flake8-import-order = { version = "^0.18" ,  optional = true }
+flake8-pyproject = { version = "^1.2" ,  optional = true }
 
 [tool.poetry.extras]
-test = ["pytest", "coverage", "mypy", "flake8", "flake8-import-order", "flake8-pyproject"]
+test = ["pytest"]
+ci = ["coverage", "mypy", "flake8", "flake8-import-order", "flake8-pyproject"]
 
 [tool.mypy]
 python_version = "3.10"
