--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,7 +40,7 @@ flake8-pyproject = { version = "^1.2" ,  optional = true }
 
 [tool.poetry.extras]
 test = ["pytest"]
-ci = ["coverage", "mypy", "flake8", "flake8-import-order", "flake8-pyproject"]
+ci = ["mypy", "flake8", "flake8-import-order", "flake8-pyproject"]
 
 [tool.mypy]
 python_version = "3.10"
@@ -50,3 +50,6 @@ ignore_missing_imports = true
 import-order-style = "pep8"
 max-line-length=100
 application-import-names = ["molgenis","tests"]
+
+[tool.pytest]
+module = "pytest"
