--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -8,3 +8,4 @@ sonar.python.xunit.reportPath=results.xml
 sonar.python.coverage.reportPaths=coverage.xml
 
 sonar.python.version=3.10
+sonar.java.version=17.0.10
