--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -8,4 +8,5 @@ sonar.python.xunit.reportPath=results.xml
 sonar.python.coverage.reportPaths=coverage.xml
 
 sonar.python.version=3.10
-sonar.java.version=17.0.10
+sonar.java.source=21
+sonar.java.target=21
